--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{{ url_for("home") }}">Home</a></li>
+            <li><a href="https://github.com/AndreMiras/NanoTTSaaS">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
