--- a/templates/base.html
+++ b/templates/base.html
@@ -23,11 +23,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><i class="fa fa-home"></i> Home</a>
+          <a class="navbar-brand" href="/"><i class="fa fa-home"></i> NanoTTSaaS</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="https://github.com/AndreMiras/NanoTTSaaS">About</a></li>
+            <li><a href="https://github.com/AndreMiras/NanoTTSaaS"><i class="fa fa-github-alt"></i> About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
