--- a/templates/home.html
+++ b/templates/home.html
@@ -22,6 +22,9 @@
     <dl>
       {{ render_field(form.text) }}
     </dl>
+    <dl>
+      {{ render_field(form.voice) }}
+    </dl>
     <div class="text-center">
     <button type="submit" class="btn btn-default"><i class="fa fa-play fa-4x"></i></button>
     </div>
