--- a/templates/home.html
+++ b/templates/home.html
@@ -25,6 +25,9 @@
     <dl>
       {{ render_field(form.voice) }}
     </dl>
+    <dl>
+      {{ render_field(form.speed) }}
+    </dl>
     <div class="text-center">
     <button type="submit" class="btn btn-default"><i class="fa fa-play fa-4x"></i></button>
     </div>
