Update forms.py, home.html & webapp.py
Configure pitch.

--- a/templates/home.html
+++ b/templates/home.html
@@ -28,6 +28,9 @@
     <dl>
       {{ render_field(form.speed) }}
     </dl>
+    <dl>
+      {{ render_field(form.pitch) }}
+    </dl>
     <div class="text-center">
     <button type="submit" class="btn btn-default"><i class="fa fa-play fa-4x"></i></button>
     </div>
