--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,8 @@
         <div class="panel panel-default">
           <div class="panel-heading">
             <h3 class="panel-title">
-              <a data-toggle="collapse" href="#collapse1">Advanced options</a>
+              <a data-toggle="collapse" href="#collapse1">
+              <i class="fa fa-chevron-down" aria-hidden="true"></i> Advanced options</a>
             </h3>
           </div>
           <div id="collapse1" class="panel-collapse collapse">
