Update templates/, fix highlight & bootstrap conflicts

--- a/templates/home.html
+++ b/templates/home.html
@@ -67,13 +67,18 @@
         </div>
       </div>
       <div class="panel-body terminal">
+        <!--
         <pre><code class="bash">
-# Using cURL and aplay
-$ curl --data "text=from the terminal" https://nanottsaas.herokuapp.com/api | aplay
-
-# Passing parameters
-$ curl --data "text=depuis le terminal" --data "voice=fr-FR" https://nanottsaas.herokuapp.com/api | aplay
+        -->
+        <div class="code bash hljs">
+        # Using cURL and aplay<br>
+        $ curl --data "text=from the terminal" https://nanottsaas.herokuapp.com/api | aplay<br><br>
+        # Passing parameters<br>
+        $ curl --data "text=depuis le terminal" --data "voice=fr-FR" https://nanottsaas.herokuapp.com/api | aplay
+        </div>
+        <!--
         </code></pre>
+        -->
       </div>
     </div>
 
