--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/languages/bash.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script>
+      // hljs.configure({useBR: true});
+      // hljs.initHighlightingOnLoad();
+      $('div.code').each(function(i, block) {
+        hljs.highlightBlock(block);
+      });
+    </script>
 
   </body>
 </html>
