--- a/templates/base.html
+++ b/templates/base.html
@@ -54,17 +54,22 @@
       {% block content %}{% endblock %}
     </div> <!-- /container -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/languages/bash.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/soundmanager2/2.97a.20150601/script/soundmanager2-nodebug-jsmin.js"></script>
+    <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
     <script>
+      // highlight.js initialization
       // hljs.configure({useBR: true});
       // hljs.initHighlightingOnLoad();
       $('div.code').each(function(i, block) {
         hljs.highlightBlock(block);
       });
     </script>
+    {% block extrajs %}
+    {% endblock extrajs %}
 
   </body>
 </html>
