--- a/templates/home.html
+++ b/templates/home.html
@@ -21,11 +21,11 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title">
-                <a data-toggle="collapse" href="#collapse1">
-                <i class="fa fa-chevron-down" aria-hidden="true"></i> Advanced options</a>
+                <a data-toggle="collapse" href="#advanced-options">
+                <i class="fa fa-cogs" aria-hidden="true"></i> Advanced options</a>
               </h3>
             </div>
-            <div id="collapse1" class="panel-collapse collapse">
+            <div id="advanced-options" class="panel-collapse collapse">
               <div class="panel-body">
                 <div class="row">
                   <div class="col-md-4">
@@ -38,8 +38,8 @@
                     {{ render_field(form.pitch, placeholder="Between 0.5 and 2.0") }}
                   </div>
                 </div> <!-- row -->
-              </div>
-            </div>
+              </div> <!-- panel-body -->
+            </div> <!-- advanced-options -->
           </div>
         </div> <!-- col-md-12 -->
 
@@ -54,24 +54,30 @@
     <h2>Play from the terminal</h2>
     <div class="panel panel-default">
       <div class="panel-heading">
-        Terminal
-        <div class="pull-right">
-          <i class="fa fa-minus" aria-hidden="true"></i>
-          <i class="fa fa-times" aria-hidden="true"></i>
-        </div>
+        <h3 class="panel-title">
+          <i class="fa fa-terminal" aria-hidden="true"></i> Terminal
+          <div class="pull-right">
+            <a data-toggle="collapse" href="#terminal">
+              <i class="fa fa-minus" aria-hidden="true"></i>
+              <i class="fa fa-times" aria-hidden="true"></i>
+            </a>
+          </div>
+        </h3>
       </div> <!-- panel-heading -->
-      <div class="panel-body terminal">
-        <div class="code bash hljs">
-        # Using cURL and aplay<br>
-        $ curl --data "text=from the terminal" https://nanottsaas.herokuapp.com/api | aplay<br><br>
+      <div id="terminal" class="panel-collapse collapse in">
+        <div class="panel-body terminal">
+          <div class="code bash hljs">
+          # Using cURL and aplay<br>
+          $ curl --data "text=from the terminal" https://nanottsaas.herokuapp.com/api | aplay<br><br>
 
-        # Passing parameters e.g. voice<br>
-        $ curl --data "text=depuis le terminal" --data "voice=fr-FR" https://nanottsaas.herokuapp.com/api | aplay<br><br>
+          # Passing parameters e.g. voice<br>
+          $ curl --data "text=depuis le terminal" --data "voice=fr-FR" https://nanottsaas.herokuapp.com/api | aplay<br><br>
 
-        # Passing more parameters e.g. speed and pitch<br>
-        $ curl --data "text=from the terminal" --data "speed=0.8" --data "pitch=1.5" https://nanottsaas.herokuapp.com/api | aplay
-        </div>
-      </div> <!-- panel-body -->
+          # Passing more parameters e.g. speed and pitch<br>
+          $ curl --data "text=from the terminal" --data "speed=0.8" --data "pitch=1.5" https://nanottsaas.herokuapp.com/api | aplay
+          </div>
+        </div> <!-- panel-body -->
+      </div> <!-- terminal -->
     </div> <!-- panel -->
   </div> <!-- col-md-12 -->
 
