--- a/templates/home.html
+++ b/templates/home.html
@@ -56,12 +56,12 @@
       <div class="panel-heading">
         <h3 class="panel-title">
           <i class="fa fa-terminal" aria-hidden="true"></i> Terminal
-          <div class="pull-right">
+          <span class="pull-right">
             <a data-toggle="collapse" href="#terminal">
               <i class="fa fa-minus" aria-hidden="true"></i>
               <i class="fa fa-times" aria-hidden="true"></i>
             </a>
-          </div>
+          </span>
         </h3>
       </div> <!-- panel-heading -->
       <div id="terminal" class="panel-collapse collapse in">
